# logport-old

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindCppKafka.cmake
include/: .gitignore  CMakeLists.txt
include/logport/: .gitignore  AwsS3Client.h  CMakeLists.txt  LogMessage.h
src/: .gitignore  CMakeLists.txt  logport  main.cc  main.cpp
src/logport/: AwsS3Client.cc  LogMessage.cc
